[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "flake8_codes"
version = "0.0.1"
description = "A catalog of error codes for Flake8 static analysis tools & a few of its plugins."
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/octadocs/flake8-codes"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"

# Documentation
mkdocs-material = "^7.1.3"
mkautodoc = "^0.1.0"

# Flake8 and its plugins
wemake-python-styleguide = "^0.15.2"
flakehell = "^0.9.0"
pydantic = "^1.8.1"
pypandoc = "^1.5"
libcst = "^0.3.18"
urlpath = "^1.1.7"
classes = "^0.2.0"
flake8 = "3.9.0"
pytkdocs = "^0.11.1"
more-itertools = "^8.8.0"


[tool.poetry.dev-dependencies]
mypy = "^0.812"
click = "<8.0.0"
pipdeptree = "^2.0.0"


[tool.flakehell]
# Will replace by my own ignorelist later
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"

[tool.flakehell.exceptions."tests/**.py"]
wemake-python-styleguide = [
  # Found protected attribute usage
  "-WPS437"
]

[tool.poetry.plugins."mkdocs.plugins"]
flake8_codes = "flake8_codes.plugin:Flake8Codes"

[tool.poetry.scripts]
jeeves = "jeeves.cli:app"
